# tadamcz

./: README.md  get_api_data.py  header.md  make_img.py  make_md.py  pyproject.toml  repo.html  repos.py
.github/workflows/: readme.yaml
